feature: add logout account for all actors
